# security-flow

./: .gitignore  LICENSE  README.md  agent.md  package.json  pyproject.toml
cases/: README.md  kali-smoke.json  legacy-quality-README.md
cases/reports/: README.md
framework/agents/kali/: openai.yaml
framework/references/: context-management.md  knowledge-retrieval.md  logging-schema.md  post-test-summary.md
framework/templates/: post-test-summary.md
framework/workflows/: engagement-lifecycle.md
knowledge/: taxonomy.json
knowledge/casebook/: overview.md  taxonomy.json
knowledge/casebook/cards/: 2024-ciscn-zeroshell.md  agent-kubernetes-goat-badpods-testbeds.md  agent-language-sandbox-vm2-pyjail-seccomp.md  agent-runtime-cve-container-escape-cases.md  agent-safeagent-local-skill-boundary.md  agent-sandboxbench-containment-evaluation.md  agent-sandboxescapebench-nested-evaluation.md  agent-sudo-writeup.md  ai-ghctf-2025-ai-cat-girl-revenge.md  anonymous-writeup.md  basic-pentesting-writeup.md  beginner-crackme.md  benign.md  (+897 more)
knowledge/playbooks/: standard-engagement-testing.md
knowledge/references/: agent-sandbox-escape-actual-case-map.md  agent-sandbox-escape-ctf-thinking.md  agent-sandbox-escape-resource-map.md  agent-sandbox-escape-test-plan.md  agent-sandbox-escape-thinking-framework.md  legacy-kali-skill.md
scripts/: bootstrap.sh  sec.py
src/security_framework/: __init__.py  engagement.py  env.py  knowledge.py  memory.py  paths.py  report.py  scope.py  summary.py  utils.py
state/: vibecoding-agent-redacted.json
tests/: test_framework_core.py
(+233 files in other folders)
