[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "security-framework"
version = "0.1.0"
description = "Unified local penetration testing, lab, and CTF assessment framework"
requires-python = ">=3.10"
dependencies = [
  "websockets>=12.0"
]

[tool.setuptools.packages.find]
where = ["src"]
